--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- game title -->
 <h1> Crystal Collector </h1>
 <!-- game instructions -->
-<p> There are four crystals. Each crystal has a hidden value. Clicking the crystal will add that value to your score. If you can get your score to equal the target number, you win. Good luck! </p>
+<p> There are four crystals. Right now they're just buttons, but try not to worry about it. Each crystal has a hidden value. Clicking the crystal will add that value to your score. If you can get your score to equal the target number, you win. Good luck! </p>
 
 
 <!-- crystals 1 through 4-->
@@ -21,7 +21,7 @@
 <button class="crystal" id="c4">C4</button>
 
 <!-- target number -->
-<div id="targetnumber"></div>
+<div id="targetscore"></div>
 
 <!-- player score -->
 <div id= "playerscore"></div>
