enhanced scoring capabilities

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 
 <!-- wins & losses -->
-<div id= "wins"> </div>
+<div id= "wins">Wins: 0</div>
 
-<div id= "losses"> </div>
+<div id= "losses">Losses: 0</div>
 
 <script src="assets/javascript/game2.js"></script>
   </body>
