--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <title>Crystal Collector</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+
   </head>
   <body>
 
 <!-- game title -->
 <h1> Crystal Collector </h1>
+
+<main class = "container-fluid">
 <!-- game instructions -->
-<p> There are four crystals. Right now they're just buttons, but try not to worry about it. Each crystal has a hidden value. Clicking the crystal will add that value to your score. If you can get your score to equal the target number, you win. Good luck! </p>
+<p> There are four crystals. Each crystal has a hidden value. Clicking the crystal will add its value to your score. If you can get your score to equal the target number, you win. Good luck! </p>
 
 
 <!-- crystals 1 through 4-->
-<button class="crystal" id="c1">C1</button>
-<button class="crystal" id="c2">C2</button>
-<button class="crystal" id="c3">C3</button>
-<button class="crystal" id="c4">C4</button>
+<img class="crystal" id="c1" src="assets/images/c1.png">
+<img class="crystal" id="c2" src="assets/images/c2.png">
+<img class="crystal" id="c3" src="assets/images/c3.jpg">
+<img class="crystal" id="c4" src="assets/images/c4.jpeg">
 
 <!-- target number -->
 <div id="targetscore"></div>
@@ -33,6 +40,7 @@
 
 <div id= "losses">Losses: 0</div>
 
+</main>
 <script src="assets/javascript/game2.js"></script>
   </body>
 </html>
